# mix-scanner

./: .gitignore  mix-scanner.ipynb  pyproject.toml
mix_scanner/: utils.py
mix_scanner/application/: scanner.py
mix_scanner/infrastructure/: shazam_scanner.py
