[tool.poetry]
name = "mix-scanner"
version = "0.1.0"
description = ""
authors = ["Samuel Briole <samuel.briole@gmail.com>"]
readme = "README.md"
packages = [{include = "mix_scanner"}]

[tool.poetry.dependencies]
python = "^3.11"
shazamio = "^0.3.1.1"
pydub = "^0.25.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
